--- a/src/app/assignments/add-assignment/add-assignment.component.html
+++ b/src/app/assignments/add-assignment/add-assignment.component.html
@@ -7,11 +7,11 @@
             Go Back
         </button>
     </div>
-     
     <h2>Assignment Registration Form</h2>
     <form ngForm #assignmentsForm class="form" >
         <mat-form-field>
-            <input matInput #assignmentName [(ngModel)] = "name" name="name" placeholder = "What is your assignment name?">
+            <input matInput #assignmentName [(ngModel)] = "name" 
+                   name="name" placeholder = "What is your assignment name?">
         </mat-form-field>
         <mat-form-field>
                 <input matInput 
@@ -22,9 +22,7 @@
                     [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
-
         <p>Submission status?</p>
-        
         <mat-slide-toggle #submissionToggle [(ngModel)]="checked"
                             name="checked"
                             color = "warn"
@@ -34,12 +32,10 @@
                             >
                             {{submissionStatus}}
         </mat-slide-toggle>
-
         <button mat-flat-button (click) = 
                     "onClick();
                     assignmentsForm.reset() 
-                    " 
-                    
+                    "  
                     color="warn"
                     class="button"
                     type="button">
@@ -54,13 +50,11 @@
                             </mat-panel-title>
                             <mat-panel-description>
                                 Real Time Data From The Form Fields Above
-                            </mat-panel-description>
-                            
+                            </mat-panel-description>         
                     </mat-expansion-panel-header>
                     <div>
                             <mat-card class="card">
                                 <mat-card-title>Updated Assignment Details: Two Way Data-Binding</mat-card-title>
-                                
                                 <mat-card-subtitle>Assignment Name: {{name}}</mat-card-subtitle>
                                 <mat-card-subtitle>Assignment Due: {{dueDate | date}}</mat-card-subtitle>
                                 <mat-card-subtitle>Submission Status: {{submissionStatus}}</mat-card-subtitle>
