--- a/src/app/assignments/edit-assignment/edit-assignment.component.html
+++ b/src/app/assignments/edit-assignment/edit-assignment.component.html
@@ -1,13 +1,11 @@
 <div class="container" *ngIf="assignment">
     <h2>Edit Assignment: {{assignment.name}}</h2>
-    
     <button mat-raised-button
                     color="primary"
                     (click)="onGoBack()"
                     style="margin-bottom:2%"> 
                     Go Back
     </button>
-
     <form ngForm class="form">
         <mat-form-field>
             <input matInput
@@ -15,7 +13,6 @@
                 [(ngModel)]="name"
                 name="name">
         </mat-form-field>
-    
         <mat-form-field>
                 <input matInput 
                     [matDatepicker]="picker"
@@ -26,9 +23,7 @@
                     [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
-
         <p>Submission status?</p>
-        
         <mat-slide-toggle #submissionToggle [(ngModel)]="checked"
                             name="checked"
                             color = "warn"
@@ -37,16 +32,13 @@
                             >
                             {{submissionStatus}}
         </mat-slide-toggle>
-        
         <button 
             mat-flat-button 
             color="accent"
             (click)="onSubmit()"
             class="button">
-            SUBMIT CHANGES
+            SUBMIT UPDATES
         </button>
-        
-       
     </form>
 </div>
 
